# ECalc

./: .gitignore  CMakeLists.txt  ECalc.files  ECalc.includes
src/: CMakeLists.txt  main.cpp  parser.cpp  parser.h  resources.qrc
src/contents/ui/: main.qml
src/contents/ui/custom/: ButtonText.qml  CalcButton.qml  EButton.qml  InputButton.qml
